# src/main/kotlin/cn/edu/buaa/scs/controller/models/CreateExperimentRequest.kt
@@ -1,0 +1,43 @@
+/**
+* cloudapi_v2
+* buaa scs cloud api v2
+*
+* The version of the OpenAPI document: 2.0
+* Contact: loheagn@icloud.com
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package cn.edu.buaa.scs.controller.models
+
+
+/**
+ * 
+ * @param courseId 
+ * @param name 
+ * @param type 表示是“实验”还是“作业”
+ * @param startTime 
+ * @param endTime 
+ * @param deadline 
+ * @param enablePeer 
+ * @param description 
+ * @param peerDescription 
+ * @param peerEndTime 
+ * @param peerAppealDeadline 
+ */
+data class CreateExperimentRequest(
+    val courseId: kotlin.Int,
+    val name: kotlin.String,
+    /* 表示是“实验”还是“作业” */
+    val type: kotlin.Boolean,
+    val startTime: kotlin.String,
+    val endTime: kotlin.String,
+    val deadline: kotlin.String,
+    val enablePeer: kotlin.Boolean,
+    val description: kotlin.String? = null,
+    val peerDescription: kotlin.String? = null,
+    val peerEndTime: kotlin.String? = null,
+    val peerAppealDeadline: kotlin.String? = null
+) 
+
